Updated 3rd and 4th collection using CRUD operations
